# AoC2024

./: CMakeLists.txt  Input.hpp  README.md  main.cpp
